--- a/packages/admin-ui/src/lib/catalog/src/components/product-variants-list/product-variants-list.component.html
+++ b/packages/admin-ui/src/lib/catalog/src/components/product-variants-list/product-variants-list.component.html
@@ -1,7 +1,7 @@
 <div class="variants-list">
     <div
         class="variant-container card"
-        *ngFor="let variant of variants | paginate: pagination; trackBy: trackById; let i = index"
+        *ngFor="let variant of variants | paginate: paginationConfig || { itemsPerPage: 10, currentPage: 1 }; trackBy: trackById; let i = index"
         [class.disabled]="!formGroupMap.get(variant.id)?.get('enabled')?.value"
     >
         <ng-container *ngIf="formGroupMap.get(variant.id) as formGroup" [formGroup]="formGroup">
@@ -293,14 +293,5 @@
                 </div>
             </ng-container>
         </ng-container>
-    </div>
-    <div class="table-footer">
-        <vdr-items-per-page-controls [(itemsPerPage)]="pagination.itemsPerPage"></vdr-items-per-page-controls>
-
-        <vdr-pagination-controls
-            [currentPage]="pagination.currentPage"
-            [itemsPerPage]="pagination.itemsPerPage"
-            (pageChange)="pagination.currentPage = $event"
-        ></vdr-pagination-controls>
     </div>
 </div>
