--- a/packages/admin-ui/src/lib/system/src/components/job-state-label/job-state-label.component.html
+++ b/packages/admin-ui/src/lib/system/src/components/job-state-label/job-state-label.component.html
@@ -1,5 +1,5 @@
 <vdr-chip [colorType]="colorType">
-    <clr-icon [attr.shape]="iconShape"></clr-icon>
+    <clr-icon [attr.shape]="iconShape" class="mr1"></clr-icon>
     {{ job.state | titlecase }}
     <span *ngIf="job.state === 'RUNNING'" class="progress">
         {{ (job.progress / 100) | percent }}
