--- a/packages/admin-ui/src/lib/settings/src/components/zone-list/zone-list.component.html
+++ b/packages/admin-ui/src/lib/settings/src/components/zone-list/zone-list.component.html
@@ -1,5 +1,11 @@
 <vdr-action-bar>
-    <vdr-ab-left> </vdr-ab-left>
+    <vdr-ab-left>
+            <vdr-language-selector
+                [availableLanguageCodes]="availableLanguages$ | async"
+                [currentLanguageCode]="contentLanguage$ | async"
+                (languageCodeChange)="setLanguage($event)"
+            ></vdr-language-selector>
+        </vdr-ab-left>
     <vdr-ab-right>
         <vdr-action-bar-items locationId="zone-list"></vdr-action-bar-items>
         <button
