--- a/packages/email-plugin/templates/order-confirmation/body.hbs
+++ b/packages/email-plugin/templates/order-confirmation/body.hbs
@@ -97,7 +97,7 @@
                     <td>
                         <img alt="{{ productVariant.name }}"
                              style="width: 50px; height: 50px;"
-                             src="assets/{{ featuredAsset.preview }}?w=50&h=50" />
+                             src="{{ featuredAsset.preview }}?w=50&h=50" />
                     </td>
                     <td>{{ quantity }} x {{ productVariant.name }}</td>
                     <td>{{ productVariant.quantity }}</td>
