feat(admin-ui): Various styling improvements

--- a/packages/admin-ui/src/lib/dashboard/src/components/dashboard/dashboard.component.scss
+++ b/packages/admin-ui/src/lib/dashboard/src/components/dashboard/dashboard.component.scss
@@ -1,5 +1,11 @@
 @import 'variables';
 
+:host {
+    display: block;
+    max-width: 1200px;
+    margin: auto;
+}
+
 .widget-header {
     display: flex;
     justify-content: flex-end;
