--- a/packages/admin-ui/src/lib/core/src/components/app-shell/app-shell.component.html
+++ b/packages/admin-ui/src/lib/core/src/components/app-shell/app-shell.component.html
@@ -1,7 +1,7 @@
 <clr-main-container>
     <clr-header>
         <div class="branding">
-            <a [routerLink]="['/']"><img src="assets/logo-75px.png" class="logo" /></a>
+            <a [routerLink]="['/']"><img src="assets/logo-75px.png" class="logo" /><span class="wordmark" *ngIf="!hideVendureBranding">vendure</span></a>
         </div>
         <div class="header-nav"></div>
         <div class="header-actions">
