--- a/packages/admin-ui/src/lib/login/src/components/login/login.component.html
+++ b/packages/admin-ui/src/lib/login/src/components/login/login.component.html
@@ -1,6 +1,9 @@
 <div class="login-wrapper">
     <form class="login">
-        <label class="title"><img src="assets/logo-300px.png" /></label>
+        <label class="title">
+            <img src="assets/logo-300px.png" />
+            <span *ngIf="!hideVendureBranding">vendure</span>
+        </label>
         <div class="login-group">
             <input
                 class="username"
