fix(admin-ui): Fix NavMenuItem.onClick callback not being triggered (#1592)

--- a/packages/admin-ui/src/lib/core/src/components/main-nav/main-nav.component.html
+++ b/packages/admin-ui/src/lib/core/src/components/main-nav/main-nav.component.html
@@ -24,6 +24,7 @@
                                     [attr.data-item-id]="section.id"
                                     [routerLink]="getRouterLink(item)"
                                     routerLinkActive="active"
+                                    (click)="item.onClick && item.onClick($event)"
                                 >
                                     <ng-container *ngIf="item.statusBadge | async as itemBadge">
                                         <vdr-status-badge
