feat(admin-ui): Make new product option names editable

--- a/packages/admin-ui/src/lib/catalog/src/components/option-value-input/option-value-input.component.scss
+++ b/packages/admin-ui/src/lib/catalog/src/components/option-value-input/option-value-input.component.scss
@@ -43,4 +43,18 @@ vdr-chip {
             opacity: 0.6;
         }
     }
+    .option-name {
+        &.editable {
+            &:hover {
+                outline: 1px solid var(--color-component-bg-300);
+                outline-offset: 1px;
+                border-radius: 1px;
+            }
+        }
+    }
+    input {
+        padding: 0px !important;
+        margin-top: -2px;
+        margin-bottom: -2px;
+    }
 }
