fix(admin-ui): Fix error when modifying Order with custom field relation
Fixes #1792

--- a/packages/admin-ui/src/lib/order/src/components/order-editor/order-editor.component.scss
+++ b/packages/admin-ui/src/lib/order/src/components/order-editor/order-editor.component.scss
@@ -6,4 +6,8 @@
     tr.modified td {
         background-color: var(--color-warning-100);
     }
+
+    .order-line-custom-field {
+        text-align: start;
+    }
 }
