feat(admin-ui): Create supporting infrastructure for bulk actions API

--- a/packages/admin-ui/src/lib/core/src/shared/components/dropdown/dropdown-menu.component.scss
+++ b/packages/admin-ui/src/lib/core/src/shared/components/dropdown/dropdown-menu.component.scss
@@ -5,6 +5,16 @@
 .dropdown-content-wrapper {
 }
 
+::ng-deep {
+    .dropdown-menu .dropdown-item {
+        display: flex;
+        align-items: center;
+        clr-icon {
+            margin-right: 3px;
+        }
+    }
+}
+
 .dropdown.open > .dropdown-menu {
     position: relative;
     top: 0;
