feat(admin-ui): Display breadcrumbs in Collection detail view

--- a/packages/admin-ui/src/lib/catalog/src/components/collection-tree/collection-tree-node.component.scss
+++ b/packages/admin-ui/src/lib/catalog/src/components/collection-tree/collection-tree-node.component.scss
@@ -3,7 +3,8 @@
     display: block;
 }
 .collection {
-    background-color: var(--color-component-bg-100);
+    background-color: var(--clr-table-bgcolor);
+    border-radius: var(--clr-global-borderradius);
     font-size: 0.65rem;
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
     margin-bottom: 2px;
@@ -39,7 +40,8 @@
 
 .tree-node {
     display: block;
-    background: var(--color-component-bg-100);
+    background-color: var(--clr-table-bgcolor);
+    border-radius: var(--clr-global-borderradius);
     overflow: hidden;
     &.cdk-drop-list-dragging {
         > .collection {
