--- a/packages/admin-ui/src/lib/core/src/shared/dynamic-form-inputs/dynamic-form-input/dynamic-form-input.component.scss
+++ b/packages/admin-ui/src/lib/core/src/shared/dynamic-form-inputs/dynamic-form-input/dynamic-form-input.component.scss
@@ -30,6 +30,10 @@
         0 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
 
+.drag-handle.hidden {
+    display: none;
+}
+
 .cdk-drag-placeholder {
     opacity: 0.1;
 }
