feat(admin-ui): Draft Order creation UI
Relates to #1453

--- a/packages/admin-ui/src/lib/order/src/components/order-detail/order-detail.component.html
+++ b/packages/admin-ui/src/lib/order/src/components/order-detail/order-detail.component.html
@@ -32,6 +32,7 @@
             *ngIf="
                 order.active === false &&
                 order.state !== 'ArrangingAdditionalPayment' &&
+                order.state !== 'ArrangingPayment' &&
                 0 < outstandingPaymentAmount(order)
             "
             (click)="transitionToState('ArrangingAdditionalPayment')"
