--- a/packages/admin-ui/src/lib/core/src/shared/components/product-selector/product-selector.component.scss
+++ b/packages/admin-ui/src/lib/core/src/shared/components/product-selector/product-selector.component.scss
@@ -1,4 +1,3 @@
-
 :host {
     display: block;
 }
@@ -6,4 +5,7 @@
 .sku {
     margin-left: 12px;
     color: var(--color-grey-500);
+}
+img {
+    border-radius: var(--border-radius-img);
 }
