feat(admin-ui): Various styling fixes

--- a/packages/admin-ui/src/lib/core/src/shared/components/action-bar/action-bar.component.scss
+++ b/packages/admin-ui/src/lib/core/src/shared/components/action-bar/action-bar.component.scss
@@ -1,3 +1,4 @@
+@import 'variables';
 
 :host {
     display: flex;
@@ -11,5 +12,24 @@
 
     > .grow {
         flex: 1;
+    }
+
+    flex-direction: column-reverse;
+
+    .right-content {
+        width: 100%;
+        display: flex;
+        justify-content: flex-end;
+    }
+
+    ::ng-deep vdr-ab-right > *:last-child {
+        margin-right: 0px;
+    }
+
+    @media screen and (min-width: $breakpoint-small) {
+        flex-direction: row;
+        .right-content {
+            width: initial;
+        }
     }
 }
