--- a/packages/admin-ui/src/lib/system/src/components/health-check/health-check.component.scss
+++ b/packages/admin-ui/src/lib/system/src/components/health-check/health-check.component.scss
@@ -6,6 +6,7 @@
 
     .status-detail {
         font-weight: bold;
+        margin-right: 6px;
     }
     .last-checked {
         font-weight: normal;
