--- a/packages/admin-ui/src/lib/core/src/components/breadcrumb/breadcrumb.component.scss
+++ b/packages/admin-ui/src/lib/core/src/components/breadcrumb/breadcrumb.component.scss
@@ -1,14 +1,25 @@
+@import "variables";
 
 :host {
     display: block;
-    padding: 0 1rem;
+    @media screen and (min-width: $breakpoint-small) {
+        padding: 0 1rem;
+    }
 }
 .breadcrumbs {
     list-style-type: none;
+    display: flex;
+    overflow-x: auto;
+    max-width: 100vw;
+    padding: 0 3px;
+    @media screen and (min-width: $breakpoint-small) {
+        padding: 0;
+    }
     li {
         font-size: 16px;
         display: inline-block;
         margin-right: 10px;
+        white-space: nowrap;
     }
     li:not(:last-child)::after {
         content: '›';
