perf(admin-ui): Lazy-load facet values for selector component
Relates to #1404

--- a/packages/admin-ui/src/lib/catalog/src/components/product-detail/product-detail.component.html
+++ b/packages/admin-ui/src/lib/catalog/src/components/product-detail/product-detail.component.html
@@ -251,7 +251,7 @@
                         [variants]="variants$ | async"
                         [paginationConfig]="paginationConfig$ | async"
                         [channelPriceIncludesTax]="channelPriceIncludesTax$ | async"
-                        [facets]="facets$ | async"
+                        [pendingFacetValueChanges]="variantFacetValueChanges"
                         [optionGroups]="product.optionGroups"
                         [productVariantsFormArray]="detailForm.get('variants')"
                         [taxCategories]="taxCategories$ | async"
@@ -264,7 +264,6 @@
                         (assetChange)="variantAssetChange($event)"
                         (updateProductOption)="updateProductOption($event)"
                         (selectionChange)="selectedVariantIds = $event"
-                        (selectFacetValueClick)="selectVariantFacetValue($event)"
                     ></vdr-product-variants-list>
                 </section>
                 <div class="pagination-row mt4" *ngIf="10 < (paginationConfig$ | async)?.totalItems">
