--- a/packages/admin-ui/src/lib/catalog/src/components/product-variants-list/product-variants-list.component.html
+++ b/packages/admin-ui/src/lib/catalog/src/components/product-variants-list/product-variants-list.component.html
@@ -252,13 +252,7 @@
                     <div class="flex-spacer"></div>
                     <div class="facets">
                         <vdr-facet-value-chip
-                            *ngFor="let facetValue of existingFacetValues(variant)"
-                            [facetValue]="facetValue"
-                            [removable]="updatePermission | hasPermission"
-                            (remove)="removeFacetValue(variant, facetValue.id)"
-                        ></vdr-facet-value-chip>
-                        <vdr-facet-value-chip
-                            *ngFor="let facetValue of pendingFacetValues(variant)"
+                            *ngFor="let facetValue of currentOrPendingFacetValues(variant)"
                             [facetValue]="facetValue"
                             [removable]="updatePermission | hasPermission"
                             (remove)="removeFacetValue(variant, facetValue.id)"
@@ -266,7 +260,7 @@
                         <button
                             *vdrIfPermissions="updatePermission"
                             class="btn btn-sm btn-secondary"
-                            (click)="selectFacetValueClick.emit([variant.id])"
+                            (click)="selectFacetValue(variant)"
                         >
                             <clr-icon shape="plus"></clr-icon>
                             {{ 'catalog.add-facets' | translate }}
