fix(admin-ui): Add links according to Unsplash guidelines (#1911)

--- a/packages/admin-ui/src/lib/login/src/components/login/login.component.html
+++ b/packages/admin-ui/src/lib/login/src/components/login/login.component.html
@@ -6,7 +6,7 @@
                     {{ 'common.login-image-title' | translate }}
                 </div>
                 <div class="login-wrapper-image-copyright">
-                    <p *ngIf="imageCreator" class="creator">Photo by  {{ imageCreator }} on Unsplash</p>
+                    <p *ngIf="imageCreator" class="creator">Photo by  <a [href]="imageCreatorUrl" target="_blank">{{ imageCreator }}</a> on <a [href]="imageUnsplashUrl" target="_blank">Unsplash</a></p>
                     <p *ngIf="imageLocation" class="location">{{ imageLocation }}</p>
                 </div>
             </div>
