--- a/packages/admin-ui/src/lib/login/src/components/login/login.component.scss
+++ b/packages/admin-ui/src/lib/login/src/components/login/login.component.scss
@@ -78,6 +78,11 @@
                         color: white;
                         margin: 0 !important;
                     }
+                    
+                    a{
+                        color: white;
+                        text-decoration: underline;
+                    }
                 }
             }
         }
